website: Optimize fonts by embedding all fonts into a single CSS.
Also substract the subset of glyphs that we need to reduce the size of the fonts.

--- a/website/template.html
+++ b/website/template.html
@@ -27,6 +27,8 @@
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
 
+  <link rel="stylesheet" href="{{ rootURL }}/fonts.css"/>
+
   <style>
     {{ .BaseCSS }}
     {{ .ExtraCSS }}
