website: Append blog title to the <title> of article pages.
This is not done for the category index pages since all of them already have
"Elvish" in their names.

--- a/website/template.html
+++ b/website/template.html
@@ -21,7 +21,7 @@
     {{ else if is "category" }}
       {{ index .CategoryMap .Category }}
     {{ else }}
-      {{ .Title }}
+      {{ .Title }} - {{ .BlogTitle }}
     {{ end }}
   </title>
 
