--- a/website/template.html
+++ b/website/template.html
@@ -4,8 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   {{ if is "homepage" }}
-    <link rel="alternate" type="application/atom+xml"
-          href="{{ rootURL }}/feed.atom">
+    <link rel="alternate" type="application/atom+xml" href="{{ rootURL }}/feed.atom">
   {{ end }}
   {{ if is "homepage" }}
     <link rel="canonical" href="{{ .RootURL }}">
@@ -52,7 +51,23 @@
   </script>
 </head>
 
-<body>
+<body class="no-js">
+  <script>
+    document.body.classList = ['has-js'];
+
+    // If the domain starts with "dark.", trigger dark mode.
+    if (location.hostname.startsWith('dark.')) {
+      document.body.classList.add('dark');
+    }
+
+    // Pressing d triggers dark mode. This is useful for debugging.
+    window.addEventListener('keypress', function(ev) {
+      if (String.fromCodePoint(ev.keyCode || ev.charCode) == 'd') {
+        document.body.classList.toggle('dark');
+      }
+    });
+  </script>
+
   {{ if not $docsetMode }}
     <div id="navbar-container"> <div id="navbar">
       <div id="blog-title">
@@ -94,18 +109,6 @@
   {{ template "content" . }}
 
   <script>
-    // If the domain starts with "dark.", trigger dark mode.
-    if (location.hostname.startsWith('dark.')) {
-      document.body.classList.add('dark');
-    }
-
-    // Pressing d triggers dark mode. This is useful for debugging.
-    window.addEventListener('keypress', function(ev) {
-      if (String.fromCodePoint(ev.keyCode || ev.charCode) == 'd') {
-        document.body.classList.toggle('dark');
-      }
-    });
-
     // If viewing locally, append index.html to relative paths that point to
     // directories
     if (location.protocol === 'file:') {
