website: Give the nav bar a large z-index.
Otherwise it could be covered by some of the content when scrolling up.

--- a/website/template.html
+++ b/website/template.html
@@ -129,6 +129,7 @@
       var lastScrollY = 0;
       var topPx = 0;
       element.style.position = 'sticky';
+      element.style.zIndex = 100;
       document.addEventListener('scroll', function(ev) {
         // Use a negative top property on sticky elements to control how much
         // of it is visible. Keep it in sync with the scroll position, and cap
