website: Serve fonts as individual files.
Upsides:

- Removing the render-blocking fonts.css allows the page to be visible while the
  font is being loaded.

- The original WOFF2 files are smaller than the base64-encoded version in
  fonts.css.

- Browsers may be smart enough to not download fonts that are not needed.

The only downside is that this requires the browser to make more requests - up
to 6 for all 6 font files. But this is not a problem with modern browsers.

--- a/website/template.html
+++ b/website/template.html
@@ -33,10 +33,15 @@
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
 
-  <link rel="stylesheet" href="{{ rootURL }}/fonts.css"/>
-
   {{ $docsetMode := eq (getEnv "ELVISH_DOCSET_MODE") "1" -}}
   <style>
+    {{ fontFace "Source Serif" 400 "normal" "SourceSerif4-Regular" }}
+    {{ fontFace "Source Serif" 400 "italic" "SourceSerif4-It" }}
+    {{ fontFace "Source Serif" 600 "normal" "SourceSerif4-Semibold" }}
+    {{ fontFace "Source Serif" 600 "italic" "SourceSerif4-SemiboldIt" }}
+    {{ fontFace "Fira Mono" 400 "normal" "FiraMono-Regular" }}
+    {{ fontFace "Fira Mono" 600 "italic" "FiraMono-Bold" }}
+
     {{ .BaseCSS }}
     {{ .ExtraCSS }}
     {{ if $docsetMode }}
