Cleanups to rc.elv references

--- a/website/ttyshot/tour/lastcmd.html
+++ b/website/ttyshot/tour/lastcmd.html
@@ -1,5 +1,5 @@
 ~&gt;                                           <span class="sgr-7">xiaq@macarch</span>
 <span class="sgr-1 sgr-37 sgr-45"> LASTCMD </span> 
-<span class="sgr-7">    vim .elvish/rc.elv                                   </span>
+<span class="sgr-7">    vim ~/.config/elvish/rc.elv                          </span>
   0 vim
   1 .elvish/rc.elv
