--- a/website/ttyshot/tour/history-list.html
+++ b/website/ttyshot/tour/history-list.html
@@ -1,6 +1,6 @@
 ~&gt;                                           <span class="sgr-7">xiaq@macarch</span>
-<span class="sgr-1 sgr-37 sgr-45"> HISTORY (dedup on) </span> 
+<span class="sgr-1 sgr-37 sgr-45"> HISTORY (dedup on) </span>
 56439 cd ~                                              <span class="sgr-35">│</span>
 56440 ls                                                <span class="sgr-35">│</span>
 56441 echo foo bar                                      <span class="sgr-35">│</span>
-<span class="sgr-7">56442 vim .elvish/rc.elv                                </span><span class="sgr-7 sgr-35"> </span>
+<span class="sgr-7">56442 vim ~/.config/elvish/rc.elv                       </span><span class="sgr-7 sgr-35"> </span>
