--- a/website/ttyshot/tour/history-walk.html
+++ b/website/ttyshot/tour/history-walk.html
@@ -1,2 +1,2 @@
-~&gt; <span class="sgr-4 sgr-32">vim</span><span class="sgr-4"> .elvish/rc.elv </span>                       <span class="sgr-7">xiaq@macarch</span>
+~&gt; <span class="sgr-4 sgr-32">vim</span><span class="sgr-4"> ~/.config/elvish/rc.elv </span>                       <span class="sgr-7">xiaq@macarch</span>
 <span class="sgr-1 sgr-37 sgr-45"> HISTORY #56395 </span>
