More tweaks to the tour.
- Wording tweaks

- Retake all ttyshots

--- a/website/ttyshot/tour/history-list.html
+++ b/website/ttyshot/tour/history-list.html
@@ -1,6 +1,7 @@
-~&gt;                                           <span class="sgr-7">xiaq@macarch</span>
-<span class="sgr-1 sgr-37 sgr-45"> HISTORY (dedup on) </span>
-56439 cd ~                                              <span class="sgr-35">│</span>
-56440 ls                                                <span class="sgr-35">│</span>
-56441 echo foo bar                                      <span class="sgr-35">│</span>
-<span class="sgr-7">56442 vim ~/.config/elvish/rc.elv                       </span><span class="sgr-7 sgr-35"> </span>
+~/on/elvish&gt;                                      <span class="sgr-7">elf@host</span>
+<span class="sgr-1 sgr-37 sgr-45"> HISTORY (dedup on) </span> 
+20286 demo                                               <span class="sgr-35">│</span>
+20288 cd ~                                               <span class="sgr-35">│</span>
+20289 ls                                                 <span class="sgr-35">│</span>
+20290 echo foo bar                                       <span class="sgr-35">│</span>
+<span class="sgr-7">20291 vim README.md                                      </span><span class="sgr-7 sgr-35"> </span>
