--- a/website/ttyshot/tour/location.html
+++ b/website/ttyshot/tour/location.html
@@ -1,6 +1,7 @@
-~&gt;                                           <span class="sgr-7">xiaq@macarch</span>
+~/on/elvish&gt;                                      <span class="sgr-7">elf@host</span>
 <span class="sgr-1 sgr-37 sgr-45"> LOCATION </span> 
-<span class="sgr-7">103 ~/go/src/github.com/elves/elvish/website            </span><span class="sgr-7 sgr-35"> </span>
- 49 ~/go/src/github.com/elves/elvish/website/learn      <span class="sgr-35">│</span>
- 47 ~/go/src/github.com/elves/elvish                    <span class="sgr-35">│</span>
- 27 ~/go/src/github.com/elves/elvish/pkg                <span class="sgr-35">│</span>
+<span class="sgr-7">148 ~                                                    </span><span class="sgr-7 sgr-35"> </span>
+ 52 ~/on/elvish/pkg/eval                                 <span class="sgr-35">│</span>
+ 49 ~/on/elvish/pkg                                      <span class="sgr-35">│</span>
+ 34 ~/.config/kak/plugins                                <span class="sgr-35">│</span>
+ 27 ~/on/elvish/pkg/edit                                 <span class="sgr-35">│</span>
