--- a/website/ttyshot/tour/completion-filter.html
+++ b/website/ttyshot/tour/completion-filter.html
@@ -1,4 +1,5 @@
-~/on/elvish&gt; <span class="sgr-32">vim</span> <span class="sgr-4">0.16.0-release-notes.md </span>    <span class="sgr-7">xiaq@macarch</span>
+~/on/elvish&gt; <span class="sgr-32">vim</span> <span class="sgr-4">0.18.0-release-notes.md </span>         <span class="sgr-7">elf@host</span>
 <span class="sgr-1 sgr-37 sgr-45"> COMPLETING argument </span> .md
-<span class="sgr-7">0.16.0-release-notes.md</span>  PACKAGING.md
-CONTRIBUTING.md          README.md   
+<span class="sgr-7">0.18.0-release-notes.md</span>  README.md  
+CONTRIBUTING.md          SECURITY.md
+PACKAGING.md           
