--- a/website/ttyshot/tour/history-walk-prefix.html
+++ b/website/ttyshot/tour/history-walk-prefix.html
@@ -1,2 +1,2 @@
-~&gt; <span class="sgr-32">echo</span> <span class="sgr-4">foo bar</span>                              <span class="sgr-7">xiaq@macarch</span>
-<span class="sgr-1 sgr-37 sgr-45"> HISTORY #55830 </span>
+~/on/elvish&gt; <span class="sgr-32">echo</span> <span class="sgr-4">foo bar</span>                         <span class="sgr-7">elf@host</span>
+<span class="sgr-1 sgr-37 sgr-45"> HISTORY #20279 </span>
