--- a/website/ttyshot/tour/location-filter.html
+++ b/website/ttyshot/tour/location-filter.html
@@ -1,6 +1,7 @@
-~&gt;                                           <span class="sgr-7">xiaq@macarch</span>
-<span class="sgr-1 sgr-37 sgr-45"> LOCATION </span> par
-<span class="sgr-7"> 19 ~/go/src/github.com/elves/elvish/pkg/parse          </span><span class="sgr-7 sgr-35"> </span>
-  7 ~/go/src/github.com/elves/elvish/pkg/parse/cmpd     <span class="sgr-7 sgr-35"> </span>
-  1 ~/go/src/github.com/elves/elvish/pkg/parse/expr     <span class="sgr-35">│</span>
-  1 ~/go/src/github.com/elves/elvish/pkg/parse/parseutil<span class="sgr-35">│</span>
+~/on/elvish&gt;                                      <span class="sgr-7">elf@host</span>
+<span class="sgr-1 sgr-37 sgr-45"> LOCATION </span> ev
+<span class="sgr-7"> 52 ~/on/elvish/pkg/eval                                 </span><span class="sgr-7 sgr-35"> </span>
+ 11 ~/on/elvish/pkg/eval/vals                            <span class="sgr-35">│</span>
+  2 ~/on/elvish/pkg/eval/errs                            <span class="sgr-35">│</span>
+  1 ~/on/elvish/pkg/eval/vars                            <span class="sgr-35">│</span>
+  0 ~/on/elvish/pkg/eval/evaltest                        <span class="sgr-35">│</span>
