Make ttyshots scripted and reproducible
The main benefits of this change are:

1) It uses a hermetic "home" directory with a known command and location
   history. Which means it no longer depends on the interactive history
   and directory layout of the person creating the ttyshot. Which also
   means it no longer leaks the private history of anyone creating a
   ttyshot. This produces reproducible results when updating ttyshots.

2) The user no longer has to augment the ttyshot by manually adding the
   output of the commands to the generated HTML file. A process that is
   error prone. The output of the commands that generate the ttyshot is
   now captured and automatically included in the resulting HTML.

3) It makes it trivial to recreate every ttyshot. Simply execute these
   commands:

   ```
   make ttyshot
   for f [website/ttyshot/**.spec] { put $f; ./ttyshot $f }
   ```

4) It makes it easy to introduce new "ttyshot" images by creating a
   shell session "spec" file. This makes it easy to replace the existing
   "```elvish-transcript...```" examples with ttyshots in order to
   ensure a consistent representation and visual consistency with the
   transcripts that are currently generated as ttyshots.

The downside of this change is the introduction of a dependency on the
Tmux application. But that seems reasonable since Tmux is a mature
application available on Linux, macOS, BSD, and probably every other
UNIX like OS we care about. Note that generating the Elvish
documentation already depends on similar apps such as Pandoc.

Related #1459

--- a/website/ttyshot/fundamentals/history-1.html
+++ b/website/ttyshot/fundamentals/history-1.html
@@ -1,2 +1,2 @@
-<!-- Follow website/ttyshot/README.md to regenerate -->~&gt; <span class="sgr-4">randint 1 7</span><span class="sgr-">                                    </span><span class="sgr-7">elf@host</span>
-<span class="sgr-1 sgr-37 sgr-45"> HISTORY #59321 </span><span class="sgr-"> </span>
+<span class="sgr-30">[1]</span><span class="sgr-39"> ~&gt; </span><span class="sgr-4 sgr-32">math:min</span><span class="sgr-4 sgr-39"> 3 1 30</span><span class="sgr-39 sgr-49">                              </span><span class="sgr-7 sgr-39 sgr-49">elf@host</span>
+<span class="sgr-1 sgr-37 sgr-45"> HISTORY #155</span>
