--- a/website/ttyshot/histlist-mode.html
+++ b/website/ttyshot/histlist-mode.html
@@ -1,15 +1,16 @@
-<!-- Follow website/ttyshot/README.md to regenerate -->~&gt;                                           <span class="sgr-7">xiaq@xiaqsmbp</span>
-<span class="sgr-1 sgr-37 sgr-45"> HISTORY </span><span class="sgr-"> </span>
-13345 make tools/ttyshot                                 <span class="sgr-35">│</span>
-13346 make                                               <span class="sgr-35">│</span>
-13347 ./assets/                                          <span class="sgr-35">│</span>
-13348 ls                                                 <span class="sgr-35">│</span>
-13349 ls                                                 <span class="sgr-35">│</span>
-13350 rm *.png                                           <span class="sgr-35">│</span>
-<span class="sgr-7">13351 git st                                             </span><span class="sgr-35">│</span>
-13352 ..                                                 <span class="sgr-35">│</span>
-13353 git st                                             <span class="sgr-35">│</span>
-13354 git add .                                          <span class="sgr-35">│</span>
-13355 git st                                             <span class="sgr-35">│</span>
-13356 git commit                                         <span class="sgr-35">│</span>
-13357 git push                                           <span class="sgr-35">│</span>
+<span class="sgr-30">[1]</span><span class="sgr-39"> ~&gt;                                              </span><span class="sgr-7 sgr-39">elf@host</span>
+<span class="sgr-1 sgr-37 sgr-45"> HISTORY (dedup on) </span><span class="sgr-39 sgr-49">
+ 126 echo (styled warning: red) bumpy road                 </span><span class="sgr-35 sgr-49">│</span>
+<span class="sgr-39 sgr-49"> 127 echo &#34;hello\nbye&#34; &gt; /tmp/x                            </span><span class="sgr-7 sgr-35 sgr-49"></span>
+<span class="sgr-39 sgr-49"> 128 from-lines &lt; /tmp/x                                   </span><span class="sgr-7 sgr-35 sgr-49"></span>
+<span class="sgr-39 sgr-49"> 129 cd /tmp                                               </span><span class="sgr-7 sgr-35 sgr-49"></span>
+<span class="sgr-39 sgr-49"> 130 cd ~/elvish                                           </span><span class="sgr-7 sgr-35 sgr-49"></span>
+<span class="sgr-39 sgr-49"> 131 git branch                                            </span><span class="sgr-7 sgr-35 sgr-49"></span>
+<span class="sgr-39 sgr-49"> 132 git checkout .                                        </span><span class="sgr-7 sgr-35 sgr-49"></span>
+<span class="sgr-39 sgr-49"> 133 git commit                                            </span><span class="sgr-7 sgr-35 sgr-49"></span>
+<span class="sgr-39 sgr-49"> 142 git status                                            </span><span class="sgr-7 sgr-35 sgr-49"></span>
+<span class="sgr-39 sgr-49"> 143 cd /usr/local/bin                                     </span><span class="sgr-7 sgr-35 sgr-49"></span>
+<span class="sgr-39 sgr-49"> 144 echo $pwd                                             </span><span class="sgr-7 sgr-35 sgr-49"></span>
+<span class="sgr-7 sgr-39 sgr-49"> 145 * (+ 3 4) (- 100 94)                                  </span><span class="sgr-7 sgr-35 sgr-49"></span>
+<span class="sgr-39 sgr-49"> 154 make                                                  </span><span class="sgr-7 sgr-35 sgr-49"></span>
+<span class="sgr-39 sgr-49"> 155 math:min 3 1 30                                       </span>
