--- a/website/ttyshot/tour/completion.html
+++ b/website/ttyshot/tour/completion.html
@@ -1,6 +1,12 @@
-<!-- Follow website/ttyshot/README.md to regenerate -->~/on/elvish&gt; <span class="sgr-32">vim</span> <span class="sgr-4">0.18.0-release-notes.md </span>         <span class="sgr-7">elf@host</span>
-<span class="sgr-1 sgr-37 sgr-45"> COMPLETING argument </span> 
-<span class="sgr-7">0.18.0-release-notes.md</span>  Makefile      <span class="sgr-1 sgr-34">cmd/  </span>  <span class="sgr-1 sgr-34">pkg/    </span>
-CONTRIBUTING.md          PACKAGING.md  cover   <span class="sgr-1 sgr-34">tools/  </span>
-Dockerfile               README.md     go.mod  <span class="sgr-1 sgr-34">website/</span>
-LICENSE                  SECURITY.md   go.sum
+<span class="sgr-30">[1]</span><span class="sgr-39"> ~&gt; </span><span class="sgr-32">cd</span><span class="sgr-39"> elvish</span>
+<span class="sgr-30">[2]</span><span class="sgr-39"> ~/elvish&gt; </span><span class="sgr-32">echo</span><span class="sgr-39"> </span><span class="sgr-4 sgr-39">0.19.0-release-notes.md </span><span class="sgr-39 sgr-49">         </span><span class="sgr-7 sgr-39 sgr-49">elf@host</span>
+<span class="sgr-1 sgr-37 sgr-45"> COMPLETING argument </span><span class="sgr-39 sgr-49"></span>
+<span class="sgr-7 sgr-39 sgr-49">0.19.0-release-notes.md</span><span class="sgr-39 sgr-49">  </span><span class="sgr-31 sgr-49">elvish</span>
+<span class="sgr-39 sgr-49">CONTRIBUTING.md          go.mod
+Dockerfile               go.sum
+LICENSE                  </span><span class="sgr-34 sgr-49">pkg/</span>
+<span class="sgr-39 sgr-49">Makefile                 </span><span class="sgr-34 sgr-49">syntaxes/</span>
+<span class="sgr-39 sgr-49">PACKAGING.md             </span><span class="sgr-34 sgr-49">tools/</span>
+<span class="sgr-39 sgr-49">README.md                </span><span class="sgr-34 sgr-49">vscode/</span>
+<span class="sgr-39 sgr-49">SECURITY.md              </span><span class="sgr-34 sgr-49">website/
+cmd/</span>
