--- a/website/ttyshot/tour/navigation.html
+++ b/website/ttyshot/tour/navigation.html
@@ -1,7 +1,16 @@
-<!-- Follow website/ttyshot/README.md to regenerate -->~/on/elvish&gt;                                      <span class="sgr-7">elf@host</span>
-<span class="sgr-1 sgr-37 sgr-45"> NAVIGATING </span> 
-<span class="sgr-1 sgr-34"> cmdg </span><span class="sgr-35">│</span> <span class="sgr-7"> 0.18.0-release-not </span><span class="sgr-7 sgr-35"> </span> This is the draft release n<span class="sgr-7 sgr-35"> </span>
-<span class="sgr-1 sgr-34"> duan </span><span class="sgr-7 sgr-35"> </span>  CONTRIBUTING.md    <span class="sgr-7 sgr-35"> </span> 2022-03-01.                <span class="sgr-7 sgr-35"> </span>
-<span class="sgr-1 sgr-7 sgr-34"> elvi </span><span class="sgr-35">│</span>  Dockerfile         <span class="sgr-35">│</span>                            <span class="sgr-35">│</span>
-<span class="sgr-1 sgr-34"> elvi </span><span class="sgr-35">│</span>  LICENSE            <span class="sgr-35">│</span> # Notable bugfixes         <span class="sgr-35">│</span>
-<span class="sgr-1 sgr-34"> elvi </span><span class="sgr-35">│</span>  Makefile           <span class="sgr-35">│</span>                            <span class="sgr-35">│</span>
+<span class="sgr-30">[2]</span><span class="sgr-39"> ~/elvish&gt;                                       </span><span class="sgr-7 sgr-39">elf@host</span>
+<span class="sgr-1 sgr-37 sgr-45"> NAVIGATING </span><span class="sgr-39 sgr-49"></span>
+<span class="sgr-34 sgr-49"> bash  </span><span class="sgr-39 sgr-49"> </span><span class="sgr-7 sgr-39 sgr-49"> 0.19.0-release-not </span><span class="sgr-7 sgr-35 sgr-49"> </span><span class="sgr-39 sgr-49"> This is the draft release not</span><span class="sgr-7 sgr-35 sgr-49"></span>
+<span class="sgr-7 sgr-34 sgr-49"> elvis </span><span class="sgr-39 sgr-49">  CONTRIBUTING.md    </span><span class="sgr-7 sgr-35 sgr-49"> </span><span class="sgr-39 sgr-49"> 2022-07-01.                  </span><span class="sgr-7 sgr-35 sgr-49"></span>
+<span class="sgr-34 sgr-49"> tmp   </span><span class="sgr-39 sgr-49">  Dockerfile         </span><span class="sgr-7 sgr-35 sgr-49"> </span><span class="sgr-39 sgr-49">                              </span><span class="sgr-7 sgr-35 sgr-49"></span>
+<span class="sgr-34 sgr-49"> zsh   </span><span class="sgr-39 sgr-49">  LICENSE            </span><span class="sgr-7 sgr-35 sgr-49"> </span><span class="sgr-39 sgr-49"> # Breaking changes           </span><span class="sgr-7 sgr-35 sgr-49"></span>
+<span class="sgr-39 sgr-49">         Makefile           </span><span class="sgr-7 sgr-35 sgr-49"> </span><span class="sgr-39 sgr-49">                              </span><span class="sgr-7 sgr-35 sgr-49"></span>
+<span class="sgr-39 sgr-49">         PACKAGING.md       </span><span class="sgr-7 sgr-35 sgr-49"> </span><span class="sgr-39 sgr-49"> # Deprecated features        </span><span class="sgr-7 sgr-35 sgr-49"></span>
+<span class="sgr-39 sgr-49">         README.md          </span><span class="sgr-7 sgr-35 sgr-49"> </span><span class="sgr-39 sgr-49">                              </span><span class="sgr-35 sgr-49">│</span>
+<span class="sgr-39 sgr-49">         SECURITY.md        </span><span class="sgr-7 sgr-35 sgr-49"> </span><span class="sgr-39 sgr-49"> Deprecated features will be r</span><span class="sgr-35 sgr-49">│</span>
+<span class="sgr-39 sgr-49">        </span><span class="sgr-34 sgr-49"> cmd                </span><span class="sgr-7 sgr-35 sgr-49"> </span><span class="sgr-39 sgr-49">                              </span><span class="sgr-35 sgr-49">│</span>
+<span class="sgr-39 sgr-49">        </span><span class="sgr-31 sgr-49"> elvish             </span><span class="sgr-7 sgr-35 sgr-49"> </span><span class="sgr-39 sgr-49"> The following deprecated feat</span><span class="sgr-35 sgr-49">│</span>
+<span class="sgr-39 sgr-49">         go.mod             </span><span class="sgr-7 sgr-35 sgr-49"> </span><span class="sgr-39 sgr-49"> and compiled, even if it is n</span><span class="sgr-35 sgr-49">│</span>
+<span class="sgr-39 sgr-49">         go.sum             </span><span class="sgr-7 sgr-35 sgr-49"> </span><span class="sgr-39 sgr-49">                              </span><span class="sgr-35 sgr-49">│</span>
+<span class="sgr-39 sgr-49">        </span><span class="sgr-34 sgr-49"> pkg                </span><span class="sgr-35 sgr-49">│</span><span class="sgr-39 sgr-49"> -   The `float64` command is </span><span class="sgr-35 sgr-49">│</span>
+<span class="sgr-39 sgr-49">        </span><span class="sgr-34 sgr-49"> syntaxes           </span><span class="sgr-35 sgr-49">│</span><span class="sgr-39 sgr-49">     number, or `inexact-num` </span><span class="sgr-35 sgr-49">│</span>
