--- a/website/ttyshot/control-structures.html
+++ b/website/ttyshot/control-structures.html
@@ -1,15 +1,16 @@
-<!-- Follow website/ttyshot/README.md to regenerate -->~&gt; <span class="sgr-32">if</span><span class="sgr-"> </span><span class="sgr-35">$true</span><span class="sgr-"> </span><span class="sgr-1">{</span><span class="sgr-"> </span><span class="sgr-32">echo</span><span class="sgr-"> good </span><span class="sgr-1">}</span><span class="sgr-"> </span><span class="sgr-33">else</span><span class="sgr-"> </span><span class="sgr-1">{</span><span class="sgr-"> </span><span class="sgr-32">echo</span><span class="sgr-"> bad </span><span class="sgr-1">}</span>               
-good
-~&gt; <span class="sgr-32">for</span><span class="sgr-"> </span><span class="sgr-35">x</span><span class="sgr-"> </span><span class="sgr-1">[</span><span class="sgr-">lorem ipsum</span><span class="sgr-1">]</span><span class="sgr-"> </span><span class="sgr-1">{</span>
-     <span class="sgr-32">echo</span><span class="sgr-"> </span><span class="sgr-35">$x</span><span class="sgr-">.pdf</span>
-   <span class="sgr-1">}</span>
-lorem.pdf
-ipsum.pdf
-~&gt; <span class="sgr-32">try</span><span class="sgr-"> </span><span class="sgr-1">{</span>
-     <span class="sgr-32">fail</span><span class="sgr-"> </span><span class="sgr-33">&#39;bad error&#39;</span>
-   <span class="sgr-1">}</span><span class="sgr-"> </span><span class="sgr-33">except</span><span class="sgr-"> </span><span class="sgr-35">e</span><span class="sgr-"> </span><span class="sgr-1">{</span>
-     <span class="sgr-32">echo</span><span class="sgr-"> error </span><span class="sgr-35">$e</span>
-   <span class="sgr-1">}</span><span class="sgr-"> </span><span class="sgr-33">else</span><span class="sgr-"> </span><span class="sgr-1">{</span>
-     <span class="sgr-32">echo</span><span class="sgr-"> ok</span>
-   <span class="sgr-1">}</span>
-error ?(fail 'bad error')
+<span class="sgr-30">[1]</span><span class="sgr-39"> ~&gt; </span><span class="sgr-32">if</span><span class="sgr-39"> </span><span class="sgr-35">$true</span><span class="sgr-39"> </span><span class="sgr-1 sgr-39">{</span><span class="sgr-39 sgr-49"> </span><span class="sgr-32 sgr-49">echo</span><span class="sgr-39 sgr-49"> good </span><span class="sgr-1 sgr-39 sgr-49">}</span><span class="sgr-39 sgr-49"> </span><span class="sgr-33 sgr-49">else</span><span class="sgr-39 sgr-49"> </span><span class="sgr-1 sgr-39 sgr-49">{</span><span class="sgr-39 sgr-49"> </span><span class="sgr-32 sgr-49">echo</span><span class="sgr-39 sgr-49"> bad </span><span class="sgr-1 sgr-39 sgr-49">}</span><span class="sgr-39 sgr-49">
+good</span>
+<span class="sgr-30 sgr-49">[2]</span><span class="sgr-39 sgr-49"> ~&gt; </span><span class="sgr-32 sgr-49">for</span><span class="sgr-39 sgr-49"> </span><span class="sgr-35 sgr-49">x</span><span class="sgr-39 sgr-49"> </span><span class="sgr-1 sgr-39 sgr-49">[</span><span class="sgr-39 sgr-49">lorem ipsum</span><span class="sgr-1 sgr-39 sgr-49">]</span><span class="sgr-39 sgr-49"> </span><span class="sgr-1 sgr-39 sgr-49">{</span><span class="sgr-39 sgr-49"> </span><span class="sgr-32 sgr-49">put</span><span class="sgr-39 sgr-49"> </span><span class="sgr-35 sgr-49">$x</span><span class="sgr-39 sgr-49">.pdf </span><span class="sgr-1 sgr-39 sgr-49">}</span><span class="sgr-39 sgr-49"></span>
+<span class="sgr-95 sgr-49">▶ </span><span class="sgr-39 sgr-49">lorem.pdf</span>
+<span class="sgr-95 sgr-49">▶ </span><span class="sgr-39 sgr-49">ipsum.pdf</span>
+<span class="sgr-30 sgr-49">[3]</span><span class="sgr-39 sgr-49"> ~&gt; </span><span class="sgr-32 sgr-49">try</span><span class="sgr-39 sgr-49"> </span><span class="sgr-1 sgr-39 sgr-49">{</span><span class="sgr-39 sgr-49">
+            </span><span class="sgr-32 sgr-49">fail</span><span class="sgr-39 sgr-49"> </span><span class="sgr-33 sgr-49">&#39;bad error&#39;</span><span class="sgr-39 sgr-49">
+       </span><span class="sgr-1 sgr-39 sgr-49">}</span><span class="sgr-39 sgr-49"> catch e </span><span class="sgr-1 sgr-39 sgr-49">{</span><span class="sgr-39 sgr-49">
+           </span><span class="sgr-32 sgr-49">put</span><span class="sgr-39 sgr-49"> </span><span class="sgr-35 sgr-49">$e</span><span class="sgr-39 sgr-49">
+       </span><span class="sgr-1 sgr-39 sgr-49">}</span><span class="sgr-39 sgr-49"> finally </span><span class="sgr-1 sgr-39 sgr-49">{</span><span class="sgr-39 sgr-49">
+           </span><span class="sgr-32 sgr-49">put</span><span class="sgr-39 sgr-49"> done
+       </span><span class="sgr-1 sgr-39 sgr-49">}</span><span class="sgr-39 sgr-49"></span>
+<span class="sgr-95 sgr-49">▶ </span><span class="sgr-39 sgr-49">[&amp;reason=[&amp;content=&#39;bad error&#39; &amp;type=fail]]</span>
+<span class="sgr-95 sgr-49">▶ </span><span class="sgr-39 sgr-49">done</span>
+<span class="sgr-30 sgr-49">[4]</span><span class="sgr-39 sgr-49"> ~&gt;                                              </span><span class="sgr-7 sgr-39 sgr-49">elf@host</span>
+
