--- a/website/ttyshot/location-mode.html
+++ b/website/ttyshot/location-mode.html
@@ -1,15 +1,16 @@
-<!-- Follow website/ttyshot/README.md to regenerate -->~&gt;                                           <span class="sgr-7">xiaq@xiaqsmbp</span>
-<span class="sgr-1 sgr-37 sgr-45"> LOCATION </span><span class="sgr-"> </span>
-<span class="sgr-7">  * ~                                                    </span><span class="sgr-35 sgr-7"> </span>
-  * ~/go/src/github.com/elves/elvish                     <span class="sgr-35">│</span>
-110 ~/on/elvish-site/code                                <span class="sgr-35">│</span>
- 62 ~/on/elvish-site/code/src                            <span class="sgr-35">│</span>
- 52 ~/go/src/github.com/elves/elvish/edit                <span class="sgr-35">│</span>
- 34 ~/on/elvish-site/code/tty                            <span class="sgr-35">│</span>
- 33 ~/on/elvish-site/code/assets                         <span class="sgr-35">│</span>
- 32 ~/go/src/github.com/elves/elvish/eval                <span class="sgr-35">│</span>
- 26 ~/on/chat-app/code                                   <span class="sgr-35">│</span>
- 24 ~/on/elvish-site/code/dst                            <span class="sgr-35">│</span>
- 20 ~/go/src/github.com/elves/md-highlighter             <span class="sgr-35">│</span>
- 14 ~/on/chat-app/code/public                            <span class="sgr-35">│</span>
- 13 ~/.elvish                                            <span class="sgr-35">│</span>
+<span class="sgr-30">[1]</span><span class="sgr-39"> ~&gt;                                              </span><span class="sgr-7 sgr-39">elf@host</span>
+<span class="sgr-1 sgr-37 sgr-45"> LOCATION </span><span class="sgr-39 sgr-49"></span>
+<span class="sgr-7 sgr-39 sgr-49"> 51 /tmp</span>
+<span class="sgr-39 sgr-49"> 51 ~/elvish
+ 50 ~/.config/elvish
+ 47 ~/.local/share/elvish
+ 42 /usr
+ 36 /usr/local/bin
+ 28 /usr/local/share
+ 20 /usr/local
+ 10 /opt
+
+
+
+</span>
+
