--- a/website/ttyshot/navigation-mode.html
+++ b/website/ttyshot/navigation-mode.html
@@ -1,15 +1,16 @@
-<!-- Follow website/ttyshot/README.md to regenerate -->~/go/src/github.com/elves/elvish&gt;            <span class="sgr-7">xiaq@xiaqsmbp</span>
-<span class="sgr-1 sgr-37 sgr-45"> NAVIGATING </span><span class="sgr-"> </span>
-<span class="sgr-01 sgr-34 sgr-7"> elvish         </span><span class="sgr-">  CONTRIBUTING.md </span><span class="sgr-35 sgr-7"> </span><span class="sgr-">  FROM golang:onbuild </span>
-<span class="sgr-01 sgr-34"> fix-for-0.7    </span><span class="sgr-"> </span><span class="sgr- sgr-7"> Dockerfile      </span><span class="sgr-35 sgr-7"> </span><span class="sgr-">                      </span>
-<span class="sgr-01 sgr-34"> images         </span><span class="sgr-">  Gopkg.lock      </span><span class="sgr-35 sgr-7"> </span>
-<span class="sgr-01 sgr-34"> md-highlighter </span><span class="sgr-">  Gopkg.toml      </span><span class="sgr-35 sgr-7"> </span>
-                  LICENSE         <span class="sgr-35 sgr-7"> </span>
-                  Makefile        <span class="sgr-35 sgr-7"> </span>
-                  README.md       <span class="sgr-35 sgr-7"> </span>
-                 <span class="sgr-01 sgr-34"> cover           </span><span class="sgr-35">│</span>
-                 <span class="sgr-01 sgr-34"> daemon          </span><span class="sgr-35">│</span>
-                 <span class="sgr-01 sgr-34"> edit            </span><span class="sgr-35">│</span>
-                 <span class="sgr-01 sgr-34"> errors          </span><span class="sgr-35">│</span>
-                 <span class="sgr-01 sgr-34"> eval            </span><span class="sgr-35">│</span>
-                 <span class="sgr-01 sgr-34"> getopt          </span><span class="sgr-35">│</span>
+<span class="sgr-30">[2]</span><span class="sgr-39"> ~/elvish&gt;                                       </span><span class="sgr-7 sgr-39">elf@host</span>
+<span class="sgr-1 sgr-37 sgr-45"> NAVIGATING </span><span class="sgr-39 sgr-49"></span>
+<span class="sgr-34 sgr-49"> bash  </span><span class="sgr-39 sgr-49"> </span><span class="sgr-7 sgr-39 sgr-49"> 0.19.0-release-not </span><span class="sgr-7 sgr-35 sgr-49"> </span><span class="sgr-39 sgr-49"> This is the draft release not</span><span class="sgr-7 sgr-35 sgr-49"></span>
+<span class="sgr-7 sgr-34 sgr-49"> elvis </span><span class="sgr-39 sgr-49">  CONTRIBUTING.md    </span><span class="sgr-7 sgr-35 sgr-49"> </span><span class="sgr-39 sgr-49"> 2022-07-01.                  </span><span class="sgr-7 sgr-35 sgr-49"></span>
+<span class="sgr-34 sgr-49"> tmp   </span><span class="sgr-39 sgr-49">  Dockerfile         </span><span class="sgr-7 sgr-35 sgr-49"> </span><span class="sgr-39 sgr-49">                              </span><span class="sgr-7 sgr-35 sgr-49"></span>
+<span class="sgr-34 sgr-49"> zsh   </span><span class="sgr-39 sgr-49">  LICENSE            </span><span class="sgr-7 sgr-35 sgr-49"> </span><span class="sgr-39 sgr-49"> # Breaking changes           </span><span class="sgr-7 sgr-35 sgr-49"></span>
+<span class="sgr-39 sgr-49">         Makefile           </span><span class="sgr-7 sgr-35 sgr-49"> </span><span class="sgr-39 sgr-49">                              </span><span class="sgr-7 sgr-35 sgr-49"></span>
+<span class="sgr-39 sgr-49">         PACKAGING.md       </span><span class="sgr-7 sgr-35 sgr-49"> </span><span class="sgr-39 sgr-49"> # Deprecated features        </span><span class="sgr-7 sgr-35 sgr-49"></span>
+<span class="sgr-39 sgr-49">         README.md          </span><span class="sgr-7 sgr-35 sgr-49"> </span><span class="sgr-39 sgr-49">                              </span><span class="sgr-35 sgr-49">│</span>
+<span class="sgr-39 sgr-49">         SECURITY.md        </span><span class="sgr-7 sgr-35 sgr-49"> </span><span class="sgr-39 sgr-49"> Deprecated features will be r</span><span class="sgr-35 sgr-49">│</span>
+<span class="sgr-39 sgr-49">        </span><span class="sgr-34 sgr-49"> cmd                </span><span class="sgr-7 sgr-35 sgr-49"> </span><span class="sgr-39 sgr-49">                              </span><span class="sgr-35 sgr-49">│</span>
+<span class="sgr-39 sgr-49">        </span><span class="sgr-31 sgr-49"> elvish             </span><span class="sgr-7 sgr-35 sgr-49"> </span><span class="sgr-39 sgr-49"> The following deprecated feat</span><span class="sgr-35 sgr-49">│</span>
+<span class="sgr-39 sgr-49">         go.mod             </span><span class="sgr-7 sgr-35 sgr-49"> </span><span class="sgr-39 sgr-49"> and compiled, even if it is n</span><span class="sgr-35 sgr-49">│</span>
+<span class="sgr-39 sgr-49">         go.sum             </span><span class="sgr-7 sgr-35 sgr-49"> </span><span class="sgr-39 sgr-49">                              </span><span class="sgr-35 sgr-49">│</span>
+<span class="sgr-39 sgr-49">        </span><span class="sgr-34 sgr-49"> pkg                </span><span class="sgr-35 sgr-49">│</span><span class="sgr-39 sgr-49"> -   The `float64` command is </span><span class="sgr-35 sgr-49">│</span>
+<span class="sgr-39 sgr-49">        </span><span class="sgr-34 sgr-49"> syntaxes           </span><span class="sgr-35 sgr-49">│</span><span class="sgr-39 sgr-49">     number, or `inexact-num` </span><span class="sgr-35 sgr-49">│</span>
