--- a/website/ttyshot/tour/completion-filter.html
+++ b/website/ttyshot/tour/completion-filter.html
@@ -1,5 +1,6 @@
-<!-- Follow website/ttyshot/README.md to regenerate -->~/on/elvish&gt; <span class="sgr-32">vim</span> <span class="sgr-4">0.18.0-release-notes.md </span>         <span class="sgr-7">elf@host</span>
-<span class="sgr-1 sgr-37 sgr-45"> COMPLETING argument </span> .md
-<span class="sgr-7">0.18.0-release-notes.md</span>  README.md  
+<span class="sgr-30">[1]</span><span class="sgr-39"> ~&gt; </span><span class="sgr-32">cd</span><span class="sgr-39"> elvish</span>
+<span class="sgr-30">[2]</span><span class="sgr-39"> ~/elvish&gt; </span><span class="sgr-32">echo</span><span class="sgr-39"> </span><span class="sgr-4 sgr-39">0.19.0-release-notes.md </span><span class="sgr-39 sgr-49">         </span><span class="sgr-7 sgr-39 sgr-49">elf@host</span>
+<span class="sgr-1 sgr-37 sgr-45"> COMPLETING argument </span><span class="sgr-39 sgr-49"> .md</span>
+<span class="sgr-7 sgr-39 sgr-49">0.19.0-release-notes.md</span><span class="sgr-39 sgr-49">  README.md
 CONTRIBUTING.md          SECURITY.md
-PACKAGING.md           
+PACKAGING.md</span>
