--- a/website/ttyshot/tour/history-list.html
+++ b/website/ttyshot/tour/history-list.html
@@ -1,7 +1,16 @@
-<!-- Follow website/ttyshot/README.md to regenerate -->~/on/elvish&gt;                                      <span class="sgr-7">elf@host</span>
-<span class="sgr-1 sgr-37 sgr-45"> HISTORY (dedup on) </span> 
-20286 demo                                               <span class="sgr-35">│</span>
-20288 cd ~                                               <span class="sgr-35">│</span>
-20289 ls                                                 <span class="sgr-35">│</span>
-20290 echo foo bar                                       <span class="sgr-35">│</span>
-<span class="sgr-7">20291 vim README.md                                      </span><span class="sgr-7 sgr-35"> </span>
+<span class="sgr-30">[1]</span><span class="sgr-39"> ~&gt;                                              </span><span class="sgr-7 sgr-39">elf@host</span>
+<span class="sgr-1 sgr-37 sgr-45"> HISTORY (dedup on) </span><span class="sgr-39 sgr-49">
+ 126 echo (styled warning: red) bumpy road                 </span><span class="sgr-35 sgr-49">│</span>
+<span class="sgr-39 sgr-49"> 127 echo &#34;hello\nbye&#34; &gt; /tmp/x                            </span><span class="sgr-7 sgr-35 sgr-49"></span>
+<span class="sgr-39 sgr-49"> 128 from-lines &lt; /tmp/x                                   </span><span class="sgr-7 sgr-35 sgr-49"></span>
+<span class="sgr-39 sgr-49"> 129 cd /tmp                                               </span><span class="sgr-7 sgr-35 sgr-49"></span>
+<span class="sgr-39 sgr-49"> 130 cd ~/elvish                                           </span><span class="sgr-7 sgr-35 sgr-49"></span>
+<span class="sgr-39 sgr-49"> 131 git branch                                            </span><span class="sgr-7 sgr-35 sgr-49"></span>
+<span class="sgr-39 sgr-49"> 132 git checkout .                                        </span><span class="sgr-7 sgr-35 sgr-49"></span>
+<span class="sgr-39 sgr-49"> 133 git commit                                            </span><span class="sgr-7 sgr-35 sgr-49"></span>
+<span class="sgr-39 sgr-49"> 142 git status                                            </span><span class="sgr-7 sgr-35 sgr-49"></span>
+<span class="sgr-39 sgr-49"> 143 cd /usr/local/bin                                     </span><span class="sgr-7 sgr-35 sgr-49"></span>
+<span class="sgr-39 sgr-49"> 144 echo $pwd                                             </span><span class="sgr-7 sgr-35 sgr-49"></span>
+<span class="sgr-39 sgr-49"> 145 * (+ 3 4) (- 100 94)                                  </span><span class="sgr-7 sgr-35 sgr-49"></span>
+<span class="sgr-39 sgr-49"> 154 make                                                  </span><span class="sgr-7 sgr-35 sgr-49"></span>
+<span class="sgr-7 sgr-39 sgr-49"> 155 math:min 3 1 30                                       </span>
