--- a/website/ttyshot/tour/lastcmd.html
+++ b/website/ttyshot/tour/lastcmd.html
@@ -1,5 +1,8 @@
-<!-- Follow website/ttyshot/README.md to regenerate -->~/on/elvish&gt;                                      <span class="sgr-7">elf@host</span>
-<span class="sgr-1 sgr-37 sgr-45"> LASTCMD </span> 
-<span class="sgr-7">    vim README.md                                         </span>
-  0 vim
-  1 README.md
+<span class="sgr-30">[1]</span><span class="sgr-39"> ~&gt; </span><span class="sgr-32">echo</span><span class="sgr-39"> abc def
+abc def</span>
+<span class="sgr-30">[2]</span><span class="sgr-39"> ~&gt; </span><span class="sgr-32">vim</span><span class="sgr-39">                                          </span><span class="sgr-7 sgr-39">elf@host</span>
+<span class="sgr-1 sgr-37 sgr-45"> LASTCMD </span><span class="sgr-39 sgr-49"></span>
+<span class="sgr-7 sgr-39 sgr-49">    echo abc def</span>
+<span class="sgr-39 sgr-49">  0 echo
+  1 abc
+  2 def</span>
