--- a/website/ttyshot/tour/location-filter.html
+++ b/website/ttyshot/tour/location-filter.html
@@ -1,7 +1,6 @@
-<!-- Follow website/ttyshot/README.md to regenerate -->~/on/elvish&gt;                                      <span class="sgr-7">elf@host</span>
-<span class="sgr-1 sgr-37 sgr-45"> LOCATION </span> ev
-<span class="sgr-7"> 52 ~/on/elvish/pkg/eval                                 </span><span class="sgr-7 sgr-35"> </span>
- 11 ~/on/elvish/pkg/eval/vals                            <span class="sgr-35">│</span>
-  2 ~/on/elvish/pkg/eval/errs                            <span class="sgr-35">│</span>
-  1 ~/on/elvish/pkg/eval/vars                            <span class="sgr-35">│</span>
-  0 ~/on/elvish/pkg/eval/evaltest                        <span class="sgr-35">│</span>
+<span class="sgr-30">[1]</span><span class="sgr-39"> ~&gt;                                              </span><span class="sgr-7 sgr-39">elf@host</span>
+<span class="sgr-1 sgr-37 sgr-45"> LOCATION </span><span class="sgr-39 sgr-49"> local</span>
+<span class="sgr-7 sgr-39 sgr-49"> 47 ~/.local/share/elvish</span>
+<span class="sgr-39 sgr-49"> 36 /usr/local/bin
+ 28 /usr/local/share
+ 20 /usr/local</span>
