--- a/website/ttyshot/tour/location.html
+++ b/website/ttyshot/tour/location.html
@@ -1,7 +1,11 @@
-<!-- Follow website/ttyshot/README.md to regenerate -->~/on/elvish&gt;                                      <span class="sgr-7">elf@host</span>
-<span class="sgr-1 sgr-37 sgr-45"> LOCATION </span> 
-<span class="sgr-7">148 ~                                                    </span><span class="sgr-7 sgr-35"> </span>
- 52 ~/on/elvish/pkg/eval                                 <span class="sgr-35">│</span>
- 49 ~/on/elvish/pkg                                      <span class="sgr-35">│</span>
- 34 ~/.config/kak/plugins                                <span class="sgr-35">│</span>
- 27 ~/on/elvish/pkg/edit                                 <span class="sgr-35">│</span>
+<span class="sgr-30">[1]</span><span class="sgr-39"> ~&gt;                                              </span><span class="sgr-7 sgr-39">elf@host</span>
+<span class="sgr-1 sgr-37 sgr-45"> LOCATION </span><span class="sgr-39 sgr-49"></span>
+<span class="sgr-7 sgr-39 sgr-49"> 51 /tmp</span>
+<span class="sgr-39 sgr-49"> 51 ~/elvish
+ 50 ~/.config/elvish
+ 47 ~/.local/share/elvish
+ 42 /usr
+ 36 /usr/local/bin
+ 28 /usr/local/share
+ 20 /usr/local
+ 10 /opt</span>
