Update ttyshots with a comment on how to regenerate.
Also explain in ttyshot/README.md that the output of commands has to be manually appended.

--- a/website/ttyshot/completion-mode.html
+++ b/website/ttyshot/completion-mode.html
@@ -1,4 +1,4 @@
-~/go/src/github.com/elves/elvish&gt; <span class="sgr-32">vim</span> <span class="sgr-4">CONTRIBUTING.md </span>
+<!-- Follow website/ttyshot/README.md to regenerate -->~/go/src/github.com/elves/elvish&gt; <span class="sgr-32">vim</span> <span class="sgr-4">CONTRIBUTING.md </span>
 <span class="sgr-1 sgr-37 sgr-45"> COMPLETING argument </span> 
 <span class="sgr-7">CONTRIBUTING.md</span>  LICENSE   NEXT-RELEASE.md  <span class="sgr-1 sgr-34">cmd/  </span>  go.su
 Dockerfile       Makefile  README.md        go.mod  main.
