--- a/website/ttyshot/tour/unicode-prompts.html
+++ b/website/ttyshot/tour/unicode-prompts.html
@@ -1,1 +1,1 @@
-~❱ <span class="sgr-36"># Fancy unicode prompts!</span>                       <span class="sgr-7">elv✸host</span>
+<!-- Follow website/ttyshot/README.md to regenerate -->~❱ <span class="sgr-36"># Fancy unicode prompts!</span>                       <span class="sgr-7">elv✸host</span>
