--- a/website/ttyshot/histlist-mode.html
+++ b/website/ttyshot/histlist-mode.html
@@ -1,4 +1,4 @@
-~&gt;                                           <span class="sgr-7">xiaq@xiaqsmbp</span>
+<!-- Follow website/ttyshot/README.md to regenerate -->~&gt;                                           <span class="sgr-7">xiaq@xiaqsmbp</span>
 <span class="sgr-1 sgr-37 sgr-45"> HISTORY </span><span class="sgr-"> </span>
 13345 make tools/ttyshot                                 <span class="sgr-35">│</span>
 13346 make                                               <span class="sgr-35">│</span>
