--- a/website/ttyshot/location-mode.html
+++ b/website/ttyshot/location-mode.html
@@ -1,4 +1,4 @@
-~&gt;                                           <span class="sgr-7">xiaq@xiaqsmbp</span>
+<!-- Follow website/ttyshot/README.md to regenerate -->~&gt;                                           <span class="sgr-7">xiaq@xiaqsmbp</span>
 <span class="sgr-1 sgr-37 sgr-45"> LOCATION </span><span class="sgr-"> </span>
 <span class="sgr-7">  * ~                                                    </span><span class="sgr-35 sgr-7"> </span>
   * ~/go/src/github.com/elves/elvish                     <span class="sgr-35">│</span>
