--- a/website/ttyshot/tour/completion.html
+++ b/website/ttyshot/tour/completion.html
@@ -1,4 +1,4 @@
-~/on/elvish&gt; <span class="sgr-32">vim</span> <span class="sgr-4">0.18.0-release-notes.md </span>         <span class="sgr-7">elf@host</span>
+<!-- Follow website/ttyshot/README.md to regenerate -->~/on/elvish&gt; <span class="sgr-32">vim</span> <span class="sgr-4">0.18.0-release-notes.md </span>         <span class="sgr-7">elf@host</span>
 <span class="sgr-1 sgr-37 sgr-45"> COMPLETING argument </span> 
 <span class="sgr-7">0.18.0-release-notes.md</span>  Makefile      <span class="sgr-1 sgr-34">cmd/  </span>  <span class="sgr-1 sgr-34">pkg/    </span>
 CONTRIBUTING.md          PACKAGING.md  cover   <span class="sgr-1 sgr-34">tools/  </span>
