--- a/website/ttyshot/tour/history-list.html
+++ b/website/ttyshot/tour/history-list.html
@@ -1,4 +1,4 @@
-~/on/elvish&gt;                                      <span class="sgr-7">elf@host</span>
+<!-- Follow website/ttyshot/README.md to regenerate -->~/on/elvish&gt;                                      <span class="sgr-7">elf@host</span>
 <span class="sgr-1 sgr-37 sgr-45"> HISTORY (dedup on) </span> 
 20286 demo                                               <span class="sgr-35">│</span>
 20288 cd ~                                               <span class="sgr-35">│</span>
