--- a/website/ttyshot/tour/lastcmd.html
+++ b/website/ttyshot/tour/lastcmd.html
@@ -1,4 +1,4 @@
-~/on/elvish&gt;                                      <span class="sgr-7">elf@host</span>
+<!-- Follow website/ttyshot/README.md to regenerate -->~/on/elvish&gt;                                      <span class="sgr-7">elf@host</span>
 <span class="sgr-1 sgr-37 sgr-45"> LASTCMD </span> 
 <span class="sgr-7">    vim README.md                                         </span>
   0 vim
