--- a/website/ttyshot/tour/location.html
+++ b/website/ttyshot/tour/location.html
@@ -1,4 +1,4 @@
-~/on/elvish&gt;                                      <span class="sgr-7">elf@host</span>
+<!-- Follow website/ttyshot/README.md to regenerate -->~/on/elvish&gt;                                      <span class="sgr-7">elf@host</span>
 <span class="sgr-1 sgr-37 sgr-45"> LOCATION </span> 
 <span class="sgr-7">148 ~                                                    </span><span class="sgr-7 sgr-35"> </span>
  52 ~/on/elvish/pkg/eval                                 <span class="sgr-35">│</span>
