--- a/website/ttyshot/tour/navigation.html
+++ b/website/ttyshot/tour/navigation.html
@@ -1,4 +1,4 @@
-~/on/elvish&gt;                                      <span class="sgr-7">elf@host</span>
+<!-- Follow website/ttyshot/README.md to regenerate -->~/on/elvish&gt;                                      <span class="sgr-7">elf@host</span>
 <span class="sgr-1 sgr-37 sgr-45"> NAVIGATING </span> 
 <span class="sgr-1 sgr-34"> cmdg </span><span class="sgr-35">│</span> <span class="sgr-7"> 0.18.0-release-not </span><span class="sgr-7 sgr-35"> </span> This is the draft release n<span class="sgr-7 sgr-35"> </span>
 <span class="sgr-1 sgr-34"> duan </span><span class="sgr-7 sgr-35"> </span>  CONTRIBUTING.md    <span class="sgr-7 sgr-35"> </span> 2022-03-01.                <span class="sgr-7 sgr-35"> </span>
