--- a/website/ttyshot/pipelines.html
+++ b/website/ttyshot/pipelines.html
@@ -1,15 +1,14 @@
-<!-- Follow website/ttyshot/README.md to regenerate -->~&gt; <span class="sgr-32">curl</span><span class="sgr-"> https://api.github.com/repos/elves/elvish/issues </span><span class="sgr-32">|</span>
-     <span class="sgr-32">from-json</span><span class="sgr-"> </span><span class="sgr-32">|</span><span class="sgr-"> </span><span class="sgr-32">all</span><span class="sgr-"> <span class="sgr-1">(</span><span class="sgr-32">one</span><span class="sgr-1">)</span> </span><span class="sgr-32">|</span>
-     <span class="sgr-32">each</span><span class="sgr-"> </span><span class="sgr-1">[</span><span class="sgr-">issue</span><span class="sgr-1">]{</span><span class="sgr-"> </span><span class="sgr-32">echo</span><span class="sgr-"> </span><span class="sgr-35">$issue</span><span class="sgr-1">[</span><span class="sgr-">number</span><span class="sgr-1">]</span><span class="sgr-">: </span><span class="sgr-35">$issue</span><span class="sgr-1">[</span><span class="sgr-">title</span><span class="sgr-1">]</span><span class="sgr-"> </span><span class="sgr-1">}</span><span class="sgr-"> </span><span class="sgr-32">|</span>
-     <span class="sgr-32">head</span><span class="sgr-"> -n 11</span>
-366: Support searching file from elvish directly
-364: Ctrl-C in elvish kills Atom in background
-357: Asynchronous syntax highlighting
-356: In web backend, run commands with pty IO, not pipe
-354: Support multi-line prompts from byte output
-353: Completers should detect context in a top-down manner
-352: Quoted command names are highlighted randomly
-351: keep navigation mode open after command
-350: Raw mode requires two presses of ^V
-344: Elvish won't compile
-343: Possible to suppress job control messages?
+<!-- Follow website/ttyshot/README.md to regenerate -->~&gt; <span class="sgr-32">curl</span> https://api.github.com/repos/elves/elvish/issues <span class="sgr-32">|</span>
+     <span class="sgr-32">from-json</span> <span class="sgr-32">|</span> <span class="sgr-32">all</span> <span class="sgr-1">(</span><span class="sgr-32">one</span><span class="sgr-1">)</span> <span class="sgr-32">|</span>
+     <span class="sgr-32">each</span> <span class="sgr-1">{</span><span class="sgr-32">|</span>x<span class="sgr-32">|</span> <span class="sgr-32">echo</span> <span class="sgr-1">(</span><span class="sgr-32">exact-num</span> <span class="sgr-35">$x</span><span class="sgr-1">[</span>number<span class="sgr-1">])</span>: <span class="sgr-35">$x</span><span class="sgr-1">[</span>title<span class="sgr-1">]</span> <span class="sgr-1">}</span> <span class="sgr-32">|</span>
+     <span class="sgr-32">head</span> -n 7
+1465: Pipelines.html still using legacy syntax.
+1464: Ability to change the initial filter for completion
+1463: No filtering when constructing the candidate list du
+ring completion
+1462: Add language.html and command.html to docset search
+index
+1460: Symbols Clobbered by Elvish?
+1453: Add a `&uniq` option to the `builtin:order` command
+and a `builtin:uniq` command
+1449: Hard crash with an Alias module alias with closure
