website/ttyshot: Regenerate all ttyshots.
There has been a lot of changes since krader's original ttyshot PR was merged,
and the generated ttyshots look rather different now.

In future commits ttyshots will be regenerated in the same commit that affects
the output.

--- a/website/ttyshot/location-mode.html
+++ b/website/ttyshot/location-mode.html
@@ -1,16 +1,11 @@
-<span class="sgr-30">[1]</span><span class="sgr-39"> ~&gt;                                              </span><span class="sgr-7 sgr-39">elf@host</span>
-<span class="sgr-1 sgr-37 sgr-45"> LOCATION </span><span class="sgr-39 sgr-49"></span>
-<span class="sgr-7 sgr-39 sgr-49"> 51 /tmp</span>
-<span class="sgr-39 sgr-49"> 51 ~/elvish
+<span class="">~&gt;                                                  </span><span class="sgr-7">elf@host</span>
+<span class="sgr-1 sgr-37 sgr-45"> LOCATION </span><span class=""> </span>
+<span class="sgr-7"> 51 /tmp                                                    </span>
+<span class=""> 51 ~/elvish
  50 ~/.config/elvish
  47 ~/.local/share/elvish
  42 /usr
  36 /usr/local/bin
  28 /usr/local/share
  20 /usr/local
- 10 /opt
-
-
-
-</span>
-
+ 10 /opt</span>
