--- a/website/ttyshot/navigation-mode.html
+++ b/website/ttyshot/navigation-mode.html
@@ -1,16 +1,17 @@
-<span class="sgr-30">[2]</span><span class="sgr-39"> ~/elvish&gt;                                       </span><span class="sgr-7 sgr-39">elf@host</span>
-<span class="sgr-1 sgr-37 sgr-45"> NAVIGATING </span><span class="sgr-39 sgr-49"></span>
-<span class="sgr-34 sgr-49"> bash  </span><span class="sgr-39 sgr-49"> </span><span class="sgr-7 sgr-39 sgr-49"> 0.19.0-release-not </span><span class="sgr-7 sgr-35 sgr-49"> </span><span class="sgr-39 sgr-49"> This is the draft release not</span><span class="sgr-7 sgr-35 sgr-49"></span>
-<span class="sgr-7 sgr-34 sgr-49"> elvis </span><span class="sgr-39 sgr-49">  CONTRIBUTING.md    </span><span class="sgr-7 sgr-35 sgr-49"> </span><span class="sgr-39 sgr-49"> 2022-07-01.                  </span><span class="sgr-7 sgr-35 sgr-49"></span>
-<span class="sgr-34 sgr-49"> tmp   </span><span class="sgr-39 sgr-49">  Dockerfile         </span><span class="sgr-7 sgr-35 sgr-49"> </span><span class="sgr-39 sgr-49">                              </span><span class="sgr-7 sgr-35 sgr-49"></span>
-<span class="sgr-34 sgr-49"> zsh   </span><span class="sgr-39 sgr-49">  LICENSE            </span><span class="sgr-7 sgr-35 sgr-49"> </span><span class="sgr-39 sgr-49"> # Breaking changes           </span><span class="sgr-7 sgr-35 sgr-49"></span>
-<span class="sgr-39 sgr-49">         Makefile           </span><span class="sgr-7 sgr-35 sgr-49"> </span><span class="sgr-39 sgr-49">                              </span><span class="sgr-7 sgr-35 sgr-49"></span>
-<span class="sgr-39 sgr-49">         PACKAGING.md       </span><span class="sgr-7 sgr-35 sgr-49"> </span><span class="sgr-39 sgr-49"> # Deprecated features        </span><span class="sgr-7 sgr-35 sgr-49"></span>
-<span class="sgr-39 sgr-49">         README.md          </span><span class="sgr-7 sgr-35 sgr-49"> </span><span class="sgr-39 sgr-49">                              </span><span class="sgr-35 sgr-49">│</span>
-<span class="sgr-39 sgr-49">         SECURITY.md        </span><span class="sgr-7 sgr-35 sgr-49"> </span><span class="sgr-39 sgr-49"> Deprecated features will be r</span><span class="sgr-35 sgr-49">│</span>
-<span class="sgr-39 sgr-49">        </span><span class="sgr-34 sgr-49"> cmd                </span><span class="sgr-7 sgr-35 sgr-49"> </span><span class="sgr-39 sgr-49">                              </span><span class="sgr-35 sgr-49">│</span>
-<span class="sgr-39 sgr-49">        </span><span class="sgr-31 sgr-49"> elvish             </span><span class="sgr-7 sgr-35 sgr-49"> </span><span class="sgr-39 sgr-49"> The following deprecated feat</span><span class="sgr-35 sgr-49">│</span>
-<span class="sgr-39 sgr-49">         go.mod             </span><span class="sgr-7 sgr-35 sgr-49"> </span><span class="sgr-39 sgr-49"> and compiled, even if it is n</span><span class="sgr-35 sgr-49">│</span>
-<span class="sgr-39 sgr-49">         go.sum             </span><span class="sgr-7 sgr-35 sgr-49"> </span><span class="sgr-39 sgr-49">                              </span><span class="sgr-35 sgr-49">│</span>
-<span class="sgr-39 sgr-49">        </span><span class="sgr-34 sgr-49"> pkg                </span><span class="sgr-35 sgr-49">│</span><span class="sgr-39 sgr-49"> -   The `float64` command is </span><span class="sgr-35 sgr-49">│</span>
-<span class="sgr-39 sgr-49">        </span><span class="sgr-34 sgr-49"> syntaxes           </span><span class="sgr-35 sgr-49">│</span><span class="sgr-39 sgr-49">     number, or `inexact-num` </span><span class="sgr-35 sgr-49">│</span>
+<span class="">~&gt; </span><span class="sgr-32">cd</span><span class=""> elvish                                                
+~/elvish&gt;                                           </span><span class="sgr-7">elf@host</span>
+<span class="sgr-1 sgr-37 sgr-45"> NAVIGATING </span><span class=""> </span>
+<span class="sgr-1 sgr-34"> bash  </span><span class=""> </span><span class="sgr-7"> Makefile           </span><span class="sgr-7 sgr-35"> </span><span class=""> SPECS := $(shell find . -name</span><span class="sgr-7 sgr-35"> </span>
+<span class="sgr-1 sgr-7 sgr-34"> elvis </span><span class="">  README.md          </span><span class="sgr-7 sgr-35"> </span><span class=""> HTMLS := $(SPECS:.spec=.html)</span><span class="sgr-7 sgr-35"> </span>
+<span class="sgr-1 sgr-34"> tmp   </span><span class="">  control-structures </span><span class="sgr-7 sgr-35"> </span><span class="">                              </span><span class="sgr-7 sgr-35"> </span>
+<span class="sgr-1 sgr-34"> zsh   </span><span class="">  control-structures </span><span class="sgr-7 sgr-35"> </span><span class=""> all: $(HTMLS)                </span><span class="sgr-7 sgr-35"> </span>
+<span class="">         control-structures </span><span class="sgr-7 sgr-35"> </span><span class="">                              </span><span class="sgr-7 sgr-35"> </span>
+<span class="">        </span><span class="sgr-1 sgr-34"> fundamentals       </span><span class="sgr-7 sgr-35"> </span><span class=""> %.html: %.spec ../tools/ttysh</span><span class="sgr-7 sgr-35"> </span>
+<span class="">         histlist-mode.html </span><span class="sgr-7 sgr-35"> </span><span class="">     ../tools/ttyshot.bin $&lt;  </span><span class="sgr-7 sgr-35"> </span>
+<span class="">         histlist-mode.raw  </span><span class="sgr-7 sgr-35"> </span><span class="">                              </span><span class="sgr-7 sgr-35"> </span>
+<span class="">         histlist-mode.spec </span><span class="sgr-7 sgr-35"> </span><span class=""> .PHONY: all                  </span><span class="sgr-7 sgr-35"> </span>
+<span class="">         location-mode.html </span><span class="sgr-7 sgr-35"> </span><span class="">                              </span><span class="sgr-7 sgr-35"> </span>
+<span class="">         location-mode.raw  </span><span class="sgr-35">│</span><span class=""> .SECONDEXPANSION:            </span><span class="sgr-7 sgr-35"> </span>
+<span class="">         location-mode.spec </span><span class="sgr-35">│</span><span class="">                              </span><span class="sgr-7 sgr-35"> </span>
+<span class="">         navigation-mode.ht </span><span class="sgr-35">│</span><span class=""> ../tools/ttyshot.bin: $$(wild</span><span class="sgr-7 sgr-35"> </span>
+<span class="">         navigation-mode.ra </span><span class="sgr-35">│</span><span class="">     make -C .. tools/ttyshot.</span><span class="sgr-35">│</span>
