--- a/website/ttyshot/tour/completion.html
+++ b/website/ttyshot/tour/completion.html
@@ -1,12 +1,13 @@
-<span class="sgr-30">[1]</span><span class="sgr-39"> ~&gt; </span><span class="sgr-32">cd</span><span class="sgr-39"> elvish</span>
-<span class="sgr-30">[2]</span><span class="sgr-39"> ~/elvish&gt; </span><span class="sgr-32">echo</span><span class="sgr-39"> </span><span class="sgr-4 sgr-39">0.19.0-release-notes.md </span><span class="sgr-39 sgr-49">         </span><span class="sgr-7 sgr-39 sgr-49">elf@host</span>
-<span class="sgr-1 sgr-37 sgr-45"> COMPLETING argument </span><span class="sgr-39 sgr-49"></span>
-<span class="sgr-7 sgr-39 sgr-49">0.19.0-release-notes.md</span><span class="sgr-39 sgr-49">  </span><span class="sgr-31 sgr-49">elvish</span>
-<span class="sgr-39 sgr-49">CONTRIBUTING.md          go.mod
-Dockerfile               go.sum
-LICENSE                  </span><span class="sgr-34 sgr-49">pkg/</span>
-<span class="sgr-39 sgr-49">Makefile                 </span><span class="sgr-34 sgr-49">syntaxes/</span>
-<span class="sgr-39 sgr-49">PACKAGING.md             </span><span class="sgr-34 sgr-49">tools/</span>
-<span class="sgr-39 sgr-49">README.md                </span><span class="sgr-34 sgr-49">vscode/</span>
-<span class="sgr-39 sgr-49">SECURITY.md              </span><span class="sgr-34 sgr-49">website/
-cmd/</span>
+<span class="">~&gt; </span><span class="sgr-32">cd</span><span class=""> elvish                                                
+~/elvish&gt; </span><span class="sgr-32">echo</span><span class=""> </span><span class="sgr-4">Makefile </span><span class="">                            </span><span class="sgr-7">elf@host</span>
+<span class="sgr-1 sgr-37 sgr-45"> COMPLETING argument </span><span class=""> </span>
+<span class="sgr-7">Makefile               </span><span class="">  location-mode.raw   
+README.md                location-mode.spec  
+control-structures.html  navigation-mode.html
+control-structures.raw   navigation-mode.raw 
+control-structures.spec  navigation-mode.spec</span>
+<span class="sgr-1 sgr-34">fundamentals/          </span><span class="">  pipelines.html      
+histlist-mode.html       pipelines.raw       
+histlist-mode.raw        pipelines.spec      
+histlist-mode.spec       </span><span class="sgr-1 sgr-34">ref/                </span>
+<span class="">location-mode.html       </span><span class="sgr-1 sgr-34">tour/               </span>
