--- a/website/ttyshot/fundamentals/history-2.html
+++ b/website/ttyshot/fundamentals/history-2.html
@@ -1,2 +1,2 @@
-<span class="sgr-30">[1]</span><span class="sgr-39"> ~&gt; </span><span class="sgr-32">ra</span><span class="sgr-4 sgr-32">ndint</span><span class="sgr-4 sgr-39"> 1 10</span><span class="sgr-39 sgr-49">                                 </span><span class="sgr-7 sgr-39 sgr-49">elf@host</span>
-<span class="sgr-1 sgr-37 sgr-45"> HISTORY #125</span>
+<span class="">~&gt; </span><span class="sgr-32">ra</span><span class="sgr-4 sgr-32">ndint</span><span class="sgr-4"> 1 10</span><span class="">                                     </span><span class="sgr-7">elf@host</span>
+<span class="sgr-1 sgr-37 sgr-45"> HISTORY #125 </span>
