--- a/website/ttyshot/tour/history-walk-prefix.html
+++ b/website/ttyshot/tour/history-walk-prefix.html
@@ -1,2 +1,2 @@
-<span class="sgr-30">[1]</span><span class="sgr-39"> ~&gt; </span><span class="sgr-32">echo</span><span class="sgr-4 sgr-39"> </span><span class="sgr-1 sgr-4 sgr-39">(</span><span class="sgr-4 sgr-32 sgr-49">styled</span><span class="sgr-4 sgr-39 sgr-49"> warning: red</span><span class="sgr-1 sgr-4 sgr-39 sgr-49">)</span><span class="sgr-4 sgr-39 sgr-49"> bumpy road</span><span class="sgr-39 sgr-49">        </span><span class="sgr-7 sgr-39 sgr-49">elf@host</span>
-<span class="sgr-1 sgr-37 sgr-45"> HISTORY #126</span>
+<span class="">~&gt; </span><span class="sgr-32">echo</span><span class="sgr-4"> </span><span class="sgr-1 sgr-4">(</span><span class="sgr-4 sgr-32">styled</span><span class="sgr-4"> warning: red</span><span class="sgr-1 sgr-4">)</span><span class="sgr-4"> bumpy road</span><span class="">            </span><span class="sgr-7">elf@host</span>
+<span class="sgr-1 sgr-37 sgr-45"> HISTORY #126 </span>
