--- a/website/ttyshot/tour/history-walk.html
+++ b/website/ttyshot/tour/history-walk.html
@@ -1,2 +1,2 @@
-<span class="sgr-30">[1]</span><span class="sgr-39"> ~&gt; </span><span class="sgr-4 sgr-32">math:min</span><span class="sgr-4 sgr-39"> 3 1 30</span><span class="sgr-39 sgr-49">                              </span><span class="sgr-7 sgr-39 sgr-49">elf@host</span>
-<span class="sgr-1 sgr-37 sgr-45"> HISTORY #155</span>
+<span class="">~&gt; </span><span class="sgr-4 sgr-32">math:min</span><span class="sgr-4"> 3 1 30</span><span class="">                                  </span><span class="sgr-7">elf@host</span>
+<span class="sgr-1 sgr-37 sgr-45"> HISTORY #155 </span>
