--- a/website/ttyshot/tour/lastcmd.html
+++ b/website/ttyshot/tour/lastcmd.html
@@ -1,8 +1,8 @@
-<span class="sgr-30">[1]</span><span class="sgr-39"> ~&gt; </span><span class="sgr-32">echo</span><span class="sgr-39"> abc def
-abc def</span>
-<span class="sgr-30">[2]</span><span class="sgr-39"> ~&gt; </span><span class="sgr-32">vim</span><span class="sgr-39">                                          </span><span class="sgr-7 sgr-39">elf@host</span>
-<span class="sgr-1 sgr-37 sgr-45"> LASTCMD </span><span class="sgr-39 sgr-49"></span>
-<span class="sgr-7 sgr-39 sgr-49">    echo abc def</span>
-<span class="sgr-39 sgr-49">  0 echo
+<span class="">~&gt; </span><span class="sgr-32">echo</span><span class=""> abc def                                             
+abc def
+~&gt; </span><span class="sgr-32">vim</span><span class="">                                              </span><span class="sgr-7">elf@host</span>
+<span class="sgr-1 sgr-37 sgr-45"> LASTCMD </span><span class=""> </span>
+<span class="sgr-7">    echo abc def                                            </span>
+<span class="">  0 echo
   1 abc
   2 def</span>
