--- a/website/ttyshot/tour/location.html
+++ b/website/ttyshot/tour/location.html
@@ -1,7 +1,7 @@
-<span class="sgr-30">[1]</span><span class="sgr-39"> ~&gt;                                              </span><span class="sgr-7 sgr-39">elf@host</span>
-<span class="sgr-1 sgr-37 sgr-45"> LOCATION </span><span class="sgr-39 sgr-49"></span>
-<span class="sgr-7 sgr-39 sgr-49"> 51 /tmp</span>
-<span class="sgr-39 sgr-49"> 51 ~/elvish
+<span class="">~&gt;                                                  </span><span class="sgr-7">elf@host</span>
+<span class="sgr-1 sgr-37 sgr-45"> LOCATION </span><span class=""> </span>
+<span class="sgr-7"> 51 /tmp                                                    </span>
+<span class=""> 51 ~/elvish
  50 ~/.config/elvish
  47 ~/.local/share/elvish
  42 /usr
